@@ -1,15 +1,13 @@
 package com.github.streamshub.systemtests.kafka;
 
-import com.github.streamshub.console.api.v1alpha1.Console;
-import com.github.streamshub.console.api.v1alpha1.ConsoleBuilder;
 import com.github.streamshub.systemtests.AbstractST;
+import com.github.streamshub.systemtests.MessageStore;
 import com.github.streamshub.systemtests.TestCaseConfig;
 import com.github.streamshub.systemtests.annotations.SetupTestBucket;
 import com.github.streamshub.systemtests.annotations.TestBucket;
 import com.github.streamshub.systemtests.clients.KafkaClients;
 import com.github.streamshub.systemtests.clients.KafkaClientsBuilder;
 import com.github.streamshub.systemtests.constants.Constants;
-import com.github.streamshub.systemtests.constants.Labels;
 import com.github.streamshub.systemtests.constants.TestTags;
 import com.github.streamshub.systemtests.locators.KafkaConnectPageSelectors;
 import com.github.streamshub.systemtests.locators.SingleGroupPageSelectors;
@@ -20,13 +18,12 @@ import com.github.streamshub.systemtests.setup.strimzi.KafkaSetup;
 import com.github.streamshub.systemtests.utils.WaitUtils;
 import com.github.streamshub.systemtests.utils.playwright.PwPageUrls;
 import com.github.streamshub.systemtests.utils.playwright.PwUtils;
+import com.github.streamshub.systemtests.utils.resourceutils.NamespaceUtils;
+import com.github.streamshub.systemtests.utils.resourceutils.kafka.KafkaClientsUtils;
+import com.github.streamshub.systemtests.utils.resourceutils.kafka.KafkaCmdUtils;
 import com.github.streamshub.systemtests.utils.resourceutils.kafka.KafkaNamingUtils;
 import com.github.streamshub.systemtests.utils.resourceutils.kafka.KafkaTopicUtils;
 import com.github.streamshub.systemtests.utils.resourceutils.kafka.KafkaUtils;
-import com.github.streamshub.systemtests.utils.resourceutils.NamespaceUtils;
-import com.github.streamshub.systemtests.utils.resourceutils.ResourceUtils;
-import com.github.streamshub.systemtests.utils.resourceutils.kafka.KafkaClientsUtils;
-import com.github.streamshub.systemtests.utils.resourceutils.kafka.KafkaCmdUtils;
 import io.skodjob.testframe.resources.KubeResourceManager;
 import io.strimzi.api.kafka.model.connect.KafkaConnectResources;
 import org.apache.kafka.common.security.auth.SecurityProtocol;
@@ -36,10 +33,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
-import java.util.Map;
-
 import static com.github.streamshub.systemtests.utils.Utils.getTestCaseConfig;
-import static com.github.streamshub.systemtests.utils.resourceutils.PodUtils.getPodSnapshotBySelector;
 
 @Tag(TestTags.REGRESSION)
 public class ConnectST extends AbstractST {
@@ -100,7 +94,7 @@ public class ConnectST extends AbstractST {
         tcc.page().navigate(PwPageUrls.getKafkaConnectorPage(tcc, tcc.kafkaName()));
 
         LOGGER.debug("Verifying Kafka Connect page header is visible");
-        PwUtils.waitForContainsText(tcc, SingleGroupPageSelectors.SGPS_PAGE_HEADER_NAME, "Kafka Connect", true);
+        PwUtils.waitForContainsText(tcc, SingleGroupPageSelectors.SGPS_PAGE_HEADER_NAME, MessageStore.kafkaConnect(), true);
 
         LOGGER.debug("Waiting for connectors table and verifying initial count (expected: 2)");
         PwUtils.waitForLocatorVisible(tcc, KafkaConnectPageSelectors.KCPS_NAME_FILTER_INPUT);
@@ -133,7 +127,7 @@ public class ConnectST extends AbstractST {
         tcc.page().navigate(PwPageUrls.getKafkaConnectClusterPage(tcc, tcc.kafkaName()));
 
         LOGGER.debug("Verifying Kafka Connect clusters page header");
-        PwUtils.waitForContainsText(tcc, SingleGroupPageSelectors.SGPS_PAGE_HEADER_NAME, "Kafka Connect", true);
+        PwUtils.waitForContainsText(tcc, SingleGroupPageSelectors.SGPS_PAGE_HEADER_NAME, MessageStore.kafkaConnect(), true);
 
         LOGGER.debug("Waiting for clusters table and verifying initial count (expected: 2)");
         PwUtils.waitForLocatorVisible(tcc, KafkaConnectPageSelectors.KCPS_NAME_FILTER_INPUT);
@@ -204,12 +198,12 @@ public class ConnectST extends AbstractST {
      */
     @SetupTestBucket(CONNECT_CLUSTERS_WITH_SINK_SOURCE_CONNECTORS_BUCKET)
     public void prepareKafkaConnectClustersWithSinkSourceConnectors() {
-        Map<String, String> oldSnap = getPodSnapshotBySelector(tcc.namespace(), Labels.getConsolePodSelector(tcc.consoleInstanceName()));
         // Deploy two kafka connect clusters
         KafkaConnectSetup.setupDefaultKafkaDefaultConnectWithFilePluginIfNeeded(tcc.namespace(), KAFKA_CONNECT_SRC_NAME, tcc.kafkaName(), tcc.kafkaUserName(), tcc.consoleInstanceName());
         KafkaConnectSetup.setupDefaultKafkaDefaultConnectWithFilePluginIfNeeded(tcc.namespace(), KAFKA_CONNECT_SINK_NAME, tcc.kafkaName(), tcc.kafkaUserName(), tcc.consoleInstanceName());
-        // Update console
-        Console console = new ConsoleBuilder(ResourceUtils.getKubeResource(Console.class, tcc.namespace(), tcc.consoleInstanceName()))
+
+        // Deploy console
+        ConsoleInstanceSetup.setupIfNeeded(ConsoleInstanceSetup.getDefaultConsoleInstance(tcc.namespace(), tcc.consoleInstanceName(), tcc.kafkaName(), tcc.kafkaUserName())
             .editSpec()
                 .addNewKafkaConnectCluster()
                     .withName(KAFKA_CONNECT_SRC_NAME)
@@ -224,14 +218,10 @@ public class ConnectST extends AbstractST {
                     .withUrl(KafkaConnectResources.url(KAFKA_CONNECT_SINK_NAME, tcc.namespace(), Constants.CONNECT_SERVICE_PORT))
                 .endKafkaConnectCluster()
             .endSpec()
-            .build();
+            .build());
 
-        KubeResourceManager.get().createOrUpdateResourceWithWait(console);
-
-        WaitUtils.waitForComponentPodsToRoll(tcc.namespace(), Labels.getConsolePodSelector(tcc.consoleInstanceName()), oldSnap);
-
-        String topicName = KafkaTopicUtils.setupTopicsAndReturn(tcc.namespace(), tcc.kafkaName(), CONNECTOR_TOPIC, 1, true, 1, 1, 1)
-            .get(0)
+        String topicName = KafkaTopicUtils.setupTopicsIfNeededAndReturn(tcc.namespace(), tcc.kafkaName(), CONNECTOR_TOPIC, 1, 1, 1, 1)
+            .getFirst()
             .getMetadata()
             .getName();
 
@@ -257,11 +247,13 @@ public class ConnectST extends AbstractST {
 
         KafkaCmdUtils.waitForConnectorInServiceApi(tcc.namespace(), KAFKA_CONNECT_SRC_NAME, SOURCE_CONNECTOR_NAME);
         KafkaCmdUtils.waitForConnectorInServiceApi(tcc.namespace(), KAFKA_CONNECT_SINK_NAME, SINK_CONNECTOR_NAME);
+
+        PwUtils.login(tcc);
     }
 
     @AfterEach
     void testCaseTeardown() {
-        getTestCaseConfig().playwright().close();
+        tcc.playwright().close();
     }
 
     @BeforeEach
@@ -269,8 +261,5 @@ public class ConnectST extends AbstractST {
         tcc = getTestCaseConfig();
         NamespaceUtils.prepareNamespace(tcc.namespace());
         KafkaSetup.setupDefaultKafkaIfNeeded(tcc.namespace(), tcc.kafkaName());
-        KafkaConnectSetup.setupDefaultKafkaDefaultConnectWithFilePluginIfNeeded(tcc.namespace(), tcc.connectName(), tcc.kafkaName(), tcc.kafkaUserName(), tcc.consoleInstanceName());
-        ConsoleInstanceSetup.setupIfNeeded(ConsoleInstanceSetup.getDefaultConsoleInstance(tcc.namespace(), tcc.consoleInstanceName(), tcc.kafkaName(), tcc.kafkaUserName()).build());
-        PwUtils.login(tcc);
     }
 }
